--- a/Aula02/curriculo.html
+++ b/Aula02/curriculo.html
@@ -1,7 +1,5 @@
     <h1>Luiz Eduardo</h1>
-    <p><b>Email:</b><a href="mailto:luiseduardo.le4160@gmail.com"> luiseduardo.le4160@gmail.com</a></p>
-    <p><b>Telefone:</b> (043) 996563773</p>
-    <p><b>LinkedIn:</b> <a href="https://www.linkedin.com/feed/?trk=sem-ga_campid.12619604099_asid.149519181115_crid.725790844702_kw.linkedin_d.c_tid.kwd-148086543_n.g_mt.e_geo.9198258" target="_blank">Luiz Eduardo</a></p>
+    <p><b>Email:</b><a href="mailto:luiseduardo.le4160@gmail.com"> luiseduardo.le4160@gmail.com</a> <b>Telefone:</b> (043) 996563773 <b>LinkedIn:</b> <a href="https://www.linkedin.com/feed/?trk=sem-ga_campid.12619604099_asid.149519181115_crid.725790844702_kw.linkedin_d.c_tid.kwd-148086543_n.g_mt.e_geo.9198258" target="_blank">Luiz Eduardo</a></p>
     <hr>
     
     <h2>Objetivo</h2>
