--- a/Reponsividade/curriculocss1.html
+++ b/Reponsividade/curriculocss1.html
@@ -11,6 +11,7 @@
     </style>
 </head>
 <body>
+    <div class="container">
     <h1 id="Curriculo">Curriculo</h1>
     <section class="header">
         <img class="profile" src="profile-svgrepo-com.svg" alt="Foto de Perfil">
@@ -67,5 +68,6 @@
         <li><strong>2025</strong>  Lorem, ipsum. - Lorem, ipsum dolor.</li>
     </ul id="Formação">
     </section>
+    </div>
 </body>
 </html>
